# loglify

./: .env.example  .gitignore  Makefile  README.md  cli.py  config.py  database.py  docker-compose.yml  llm_parser.py  main.py  models.py  pyproject.toml  requirements.txt  review.py  run.py  scheduler.py  setup.sh  telegram_bot.py  verify_setup.py
aggregators/: __init__.py  github.py
tests/: test_llm_parser.py
